gcc/testsuite/rust/rustc/ui/mismatched_types/method-help-unsatisfied-bound.rs
struct Foo;

fn main() {
    let a: Result<(), Foo> = Ok(());
    a.unwrap();
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

